src/components/api_test/errors/index.js
import _BadProxy from './bad_proxy';
import _DefaultError from './default_error';
import _NoApache from './no_apache';
import _NotFound from './not_found';

export const BadProxy = _BadProxy;
export const DefaultError = _DefaultError;
export const NoApache = _NoApache;
export const NotFound = _NotFound;
